Archetype for Spark runtime modules (#3457)
* Add new geomesa-archetypes-spark-runtime parent module
* Use jackson for geomesa-convert-json parsing
* Split up spark tests and remove spark-test module
* Move javadocs CI to weekly job